k8s/overlays/tenant-shared-template/patches/medusa-init-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medusa
  spec:
    template:
      spec:
