k8s/overlays/tenant-shared-template/patches/replicas.yaml
$patch: replace
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medusa
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: medusa
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
