k8s/overlays/tenant-shared-template/patches/storefront-secret-name.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
  spec:
    template:
      spec:
        containers:
          - name: storefront
