k8s/overlays/tenant-shared-template/patches/remove-minio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: minio
$patch: delete
