k8s/overlays/tenant-shared-template/patches/remove-postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
$patch: delete
