k8s/overlays/tenant-shared-template/patches/remove-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: redis
$patch: delete
