k8s/overlays/tenant-shared-template/patches/remove-minio-console-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
$patch: delete
